# dhall-terraform

./: .envrc  .gitignore  LICENSE  Makefile  dhall-terraform.cabal  dhall-terraform.nix  flake.nix
app/: Main.hs
lib/registry.terraform.io/hashicorp/aws/data_sources/: aws_acm_certificate.dhall  aws_acmpca_certificate_authority.dhall  aws_alb.dhall  aws_alb_target_group.dhall  aws_ami.dhall  aws_api_gateway_export.dhall  aws_api_gateway_sdk.dhall  aws_apigatewayv2_export.dhall  aws_appmesh_mesh.dhall  aws_appmesh_virtual_service.dhall  aws_autoscaling_group.dhall  aws_backup_framework.dhall  aws_backup_report_plan.dhall  aws_batch_job_queue.dhall  aws_batch_scheduling_policy.dhall  aws_ce_cost_category.dhall  aws_ce_tags.dhall  aws_cloudcontrolapi_resource.dhall  aws_cloudfront_distribution.dhall  aws_cloudfront_origin_access_identities.dhall  aws_cloudfront_origin_access_identity.dhall  aws_cloudfront_realtime_log_config.dhall  aws_cloudfront_response_headers_policy.dhall  aws_cloudwatch_log_groups.dhall  aws_codecommit_approval_rule_template.dhall  aws_codestarconnections_connection.dhall  aws_cognito_user_pool_client.dhall  aws_cognito_user_pool_clients.dhall  aws_cognito_user_pool_signing_certificate.dhall  aws_connect_contact_flow.dhall  aws_connect_contact_flow_module.dhall  aws_connect_hours_of_operation.dhall  aws_connect_instance.dhall  aws_connect_prompt.dhall  aws_connect_queue.dhall  aws_connect_quick_connect.dhall  aws_connect_routing_profile.dhall  aws_connect_security_profile.dhall  aws_connect_user_hierarchy_group.dhall  aws_connect_user_hierarchy_structure.dhall  (+138 more)
lib/registry.terraform.io/hashicorp/aws/provider/: provider.dhall
lib/registry.terraform.io/hashicorp/aws/resources/: aws_accessanalyzer_archive_rule.dhall  aws_account_alternate_contact.dhall  aws_acm_certificate.dhall  aws_acmpca_certificate_authority.dhall  aws_acmpca_permission.dhall  aws_alb_target_group.dhall  aws_ami.dhall  aws_ami_copy.dhall  aws_ami_from_instance.dhall  aws_ami_launch_permission.dhall  aws_api_gateway_authorizer.dhall  aws_api_gateway_domain_name.dhall  aws_api_gateway_stage.dhall  aws_api_gateway_usage_plan.dhall  aws_apigatewayv2_domain_name.dhall  aws_appconfig_configuration_profile.dhall  aws_appconfig_deployment.dhall  aws_appconfig_deployment_strategy.dhall  aws_appconfig_environment.dhall  aws_appconfig_hosted_configuration_version.dhall  aws_appflow_connector_profile.dhall  aws_appflow_flow.dhall  aws_appintegrations_event_integration.dhall  aws_applicationinsights_application.dhall  aws_appmesh_gateway_route.dhall  aws_apprunner_observability_configuration.dhall  aws_apprunner_service.dhall  aws_apprunner_vpc_connector.dhall  aws_appstream_directory_config.dhall  aws_appstream_fleet.dhall  aws_appstream_fleet_stack_association.dhall  aws_appstream_image_builder.dhall  aws_appstream_stack.dhall  aws_appstream_user.dhall  aws_appstream_user_stack_association.dhall  aws_appsync_api_cache.dhall  aws_appsync_datasource.dhall  aws_appsync_domain_name.dhall  aws_appsync_domain_name_api_association.dhall  aws_appsync_function.dhall  (+466 more)
lib/registry.terraform.io/hashicorp/azurerm/data_sources/: azurerm_aadb2c_directory.dhall  azurerm_app_service.dhall  (+117 more)
src/Terraform/: Convert.hs
tf/aws/: main.tf
tf/azurerm/: .terraform.lock.hcl  main.tf
(+468 files in other folders)
