cabal-version:       2.0
name:                dhall-terraform
version:             0.2.0
synopsis:            Creates Terraform resources using Dhall
description:         Generate Dhall types for an arbitrary Terraform provider using the provider schema.
license:             MIT
license-file:        LICENSE
author:              Mark Sisson
maintainer:          mark@sisson.io
copyright:           2022 Mark Sisson
category:            Utility
build-type:          Simple
extra-doc-files:     README.md
tested-with:         GHC == 9.0.2

library
  hs-source-dirs:      src
  exposed-modules:     Terraform.Types
                     , Terraform.Convert


  build-depends:       base                ^>= 4.15.0.0
                     , aeson
                     , aeson-casing
                     , text
                     , containers
                     , directory
                     , split
                     , dhall                >= 1.41.0
                     , turtle

  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010

executable dhall-terraform
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Paths_dhall_terraform

  build-depends:       base ^>= 4.15.0.0
                     , dhall-terraform
                     , optparse-applicative
                     , bytestring
                     , aeson
                     , directory
                     , dhall                >= 1.41.0
                     , prettyprinter
                     , containers
                     , text
                     , turtle


  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010

test-suite dhall-terraform-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs

  build-depends:       base ^>= 4.15.0.0
                     , dhall-terraform


  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010
